@@ -138,15 +138,6 @@ BEGIN
         BOTTOMMARGIN, 114
     END
 
-    IDD_REMIND_SAVE, DIALOG
-    BEGIN
-        LEFTMARGIN, 7
-        RIGHTMARGIN, 272
-        VERTGUIDE, 47
-        TOPMARGIN, 7
-        BOTTOMMARGIN, 83
-    END
-
     IDD_SECURECLEAR, DIALOG
     BEGIN
         LEFTMARGIN, 7
@@ -484,20 +475,6 @@ BEGIN
     CONTROL         "Tree1",IDC_ITEMTREE,"SysTreeView32",TVS_HASBUTTONS | 
                     TVS_HASLINES | TVS_LINESATROOT | TVS_EDITLABELS | NOT 
                     WS_VISIBLE | WS_TABSTOP,2,0,290,203
-END
-
-IDD_REMIND_SAVE DIALOG  0, 0, 279, 90
-STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "Save on Minimize"
-FONT 8, "MS Sans Serif"
-BEGIN
-    ICON            IDI_MBASKICON,IDC_STATIC,15,7,20,20
-    LTEXT           "The password database will be locked when Password Safe is minimized. In order to enable this function, the password database must be saved. Click ""Don't Lock"" and the password database will not be locked.",
-                    IDC_DELITEM,47,7,225,33
-    CONTROL         "&Don't ask me again",IDC_CLEARCHECK,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,47,50,89,10
-    DEFPUSHBUTTON   "&Save and Lock",IDOK,77,69,60,14
-    PUSHBUTTON      "Don't Lock",IDCANCEL,142,69,50,14
 END
 
 IDD_SECURECLEAR DIALOG  0, 0, 248, 84
