@@ -711,27 +711,6 @@
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath="RemindSaveDlg.cpp">
-				<FileConfiguration
-					Name="Release|Win32">
-					<Tool
-						Name="VCCLCompilerTool"
-						Optimization="2"
-						AdditionalIncludeDirectories=""
-						PreprocessorDefinitions=""/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Debug|Win32">
-					<Tool
-						Name="VCCLCompilerTool"
-						Optimization="0"
-						AdditionalIncludeDirectories=""
-						PreprocessorDefinitions=""
-						BasicRuntimeChecks="3"
-						BrowseInformation="1"/>
-				</FileConfiguration>
-			</File>
-			<File
 				RelativePath=".\RUEList.cpp">
 			</File>
 			<File
@@ -950,9 +929,6 @@
 			</File>
 			<File
 				RelativePath="QuerySetDef.h">
-			</File>
-			<File
-				RelativePath="RemindSaveDlg.h">
 			</File>
 			<File
 				RelativePath="resource.h">
