@@ -22,6 +22,7 @@ to n0tig.
 [] Minimum master passphrase length is now 8 characters, and user is
 not offered the option of accepting weak passphrases.
 [1513482] Preferences now saved in the .psafe3 file
+[1504107] No longer saves cleared database
 
 New Features for 3.01
 =====================
